# RustNN

./: Cargo.toml
benches/: threaded_benches.rs
src/: lib.rs
tests/: xor.rs
